src/index.css
@import "react-alice-carousel/lib/alice-carousel.css";
@import url("./lib.css");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Poppins, sans-serif;
}

input[type="file"]::-webkit-file-upload-button {
  cursor: pointer;
}

body {
  @apply m-0;
  @apply p-0;
  @apply flex;
  @apply box-border;
  @apply overscroll-y-none;
  @apply overflow-x-hidden;
}

.svg-wrapper {
  > svg {
    @apply w-full;
    @apply h-full;
  }
}

